css/main.css
/* ... */
*{
  box-sizing:  border-box;
}

html{
  scroll-behavior: smooth;
  scroll-padding-top: 4rem;
}

body{
  font-family: var(--text-serif);
  font-weight: 400;
  font-style: normal;
}

/*HEADER*/
header{
  position: fixed;
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: 100%;
  padding: 1rem 2rem;
  z-index: 2;
  background-color: #fff;
}

@media screen and (min-width: 40em){
  header{
    display: grid;
    grid-template-columns: 1fr 3fr;
    grid-template-rows: 1fr;
    padding: 1.5rem 2.5rem;
    opacity: 100%;
  }
}

header h1{
  /*styling*/
  font-family: etna, sans-serif;
  font-weight: 600;
  color: var(--color-green-dark);
  font-size: 2.5rem;
  padding: 0;
  margin: 0;
}

@media screen and (min-width: 40em){
  header h1{
  grid-column: 1;
  justify-self: start;
  align-self: center;
  /*styling*/
  font-family: etna, sans-serif;
  font-weight: 600;
  color: var(--color-green-dark);
  font-size: 2.5rem;
  padding: 0;
  margin: 0;
}
}

header nav{
  /*grid-column: 2;
  justify-self: end;
  align-self: center;*/
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height:  100vh;
  display: flex;
  flex-direction:  column;
  justify-content: center;
  text-align: center;
  gap: 2rem;
  background-color: var(--color-green-dark);
  /*gap: 2rem;
  padding: 0;
  margin: 0;*/
}

@media screen and (min-width: 40em){
  header nav {
    grid-column: 2;
    position: static;
    justify-self: end;
    align-self: center;
    width: auto;
    height: auto;
    display: flex;
    flex-direction: row;
    gap: 2rem;
    background-color: #fff;
    padding: 0;
    margin: 0;
  }
}

header nav a{
    font-family: var(--text-serif);
    font-weight: 600;
    font-size: 1.5rem;
    color: var(--color-green-light);
    text-decoration: none;
  }

@media screen and (min-width: 40em){
  header nav a{
    font-family: var(--text-serif);
    font-weight: 600;
    font-size: 1.5rem;
    color: var(--color-green-dark);
    text-decoration: none;
  }
}

.toggle-menu{
  border: none;
  background: none;
  color: var(--color-green-dark);
  font-size: 2rem;
  z-index: 1;
}

.toggle-menu .fa-xmark {
  color: #fff;
}

/* toggle/button is not needed on wide screens */
@media screen and (min-width: 40em){
  .toggle-menu {
    display: none;
  }
}

.hide{
  display: none;
}

/* hide class is not needed on wide screens */
@media screen and (min-width: 40em){
  .hide{
    display: flex !important;
  }
}

.shop {
    font-weight: 700;
  border-radius: 3rem;
  padding: .75rem 1.5rem;
  background-color: var(--color-green-med);
  color: var(--color-green-dark);
}

@media screen and (min-width: 40em){
  .shop{
    font-weight: 700;
    border-radius: 3rem;
    padding: .75rem 1.5rem;
    background-color: var(--color-green-med);
  }
}


/*INTRO/HERO*/

.hero{
/*  height: 48rem;*/
  height: 60vh;
  /*GRID*/
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  grid-template-rows: 1fr;
  background-color: var(--color-green-dark);
  margin: 0;
/*  padding-top: 6.25rem;*/
}

@media screen and (min-width: 40em){
  .hero{
    height: 80vh;
    /*GRID*/
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    grid-template-rows: 1fr;
    background-color: var(--color-green-dark);
    margin: 0;
  /*  padding-top: 6.25rem;*/
  }
}


.hero img{
  /*position on grid*/
  grid-column: 1/span 3;
  grid-row: 1;
  /*sizing/styling*/
  height: 100%;
  width: 100%;
  object-fit: cover;
  align-self: center;
  opacity: 40%;
}

@media screen and (min-width: 40em){
  .hero img{
    /*position on grid*/
    grid-column: 1/span 3;
    grid-row: 1;
    /*sizing/styling*/
    height: 100%;
    width: 100%;
    object-fit: cover;
    align-self: end;
  /*  position: static;*/
  }
}

.hero p{
  /*position on grid*/
  grid-column: 3;
  grid-row: 1;
  align-self: start;
  justify-self: start;
  text-align: left;
/*  padding-right: 3.5rem;
*/  padding-top: 2rem;
  z-index: 1;
  /*styling*/
  color: #fff;
  font-size: 1rem;
  font-weight: 400;
}

@media screen and (min-width: 40em){
  .hero p{
    /*position on grid*/
    grid-column: 3;
    grid-row: 1;
    align-self: center;
    justify-self: start;
    text-align: left;
    padding-right: 3.5rem;
    padding-top: 0;
    /*styling*/
    color: #fff;
    font-size: 2rem;
    font-weight: 400;
  }
}

.of-the-week{
/*  text-decoration: underline;*/
  font-weight: 600;
}

.charity{
  font-style: italic;
  /*text-decoration: underline;*/
}

/* FEATURES & BENEFITS*/
.features-benefits{
  color: #fff;
  background-image: linear-gradient(#A3DDB5, #3A5A40);
  margin: 0;
}

.features-benefits ul{
  list-style: none;
  margin: 0;
  padding: 0;
}

.features-benefits ul li{
  display: grid;
  grid-template-rows: auto auto;
  grid-gap: 1rem;
  justify-items: center;
  margin: 0;
  padding: 4rem 2rem;

}

.features-benefits ul li .image{
  grid-row: 1;
  justify-self: center;
  text-align: center;
}

.features-benefits ul li .image img{
  border-radius: 20rem;
  justify-self: center;
  text-align: center;
  object-fit: cover;
  width: 80%;
}

.features-benefits ul li .text{
  grid-row: 2;
  align-items: center;
  justify-items: center;
  text-align: center;
}



@media screen and (min-width: 40em){
  .features-benefits ul{
    padding: 8rem 0;
    margin: 0;
  }

  .features-benefits ul li{
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: 1fr;
    grid-gap: 4rem;
/*    padding: 7.75rem;*/
    max-width: 80%;
    margin: 0 auto;
  }
  .features-benefits ul li .image{
    grid-row: 1;
    grid-column: 2;
  }

  .features-benefits ul li .text{
    grid-row: 1;
    grid-column: 1;
    align-self: center;
  }

  .features-benefits ul .alt .image{
    grid-column: 1;
  }
  .features-benefits ul .alt .text{
    grid-column: 2;
  }
}

.features-benefits ul li .text h3{
  font-size: 2.5rem;
  font-weight: 700;
  margin-bottom: -1rem;
/*  margin: 0 0 .5rem 0;*/
}
/* ... */

